# domestic

./: .gitignore  CHANGELOG.md  Cargo.toml  POC.md  README.md
crates/cli/: Cargo.toml
crates/management/: Cargo.toml
crates/management/src/: main.rs
crates/web/: Cargo.toml  domestic_development.sqlite
crates/web/app/controllers/: chat.rs
crates/web/config/: app.yaml  development.yaml  test.yaml
crates/web/examples/: playground.rs
crates/web/frontend/: package-lock.json  pnpm-lock.yaml
crates/web/migration/src/: lib.rs  m20250203_174659_domestics.rs
crates/web/src/: app.rs  main.rs
crates/web/src/controllers/: auth.rs  home.rs
crates/web/src/initializers/: view_engine.rs
crates/web/src/mailers/: auth.rs
crates/web/src/tasks/: seed.rs
crates/web/tests/models/: domestics.rs  mod.rs  users.rs
crates/web/tests/requests/: auth.rs  home.rs  prepare_data.rs
crates/web/tests/tasks/: seed.rs
crates/web/views/: layout.html
crates/web/views/home/: index.html
