[package]
name = "domestic"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/cli",
    "crates/web",
    "crates/management",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Yarenty"]
license = "Apache-2.0"
repository = "https://github.com/yarenty/domestic"
description = "Local LLM/RAG/ChatGPT implementation"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
