[package]
name = "domestic-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for Domestic LLM"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
ollama-rs = { version = "0.2.4", features = ["stream"] }
tokio-stream = "0.1.17"
