[package]
name = "domestic-management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Management utilities for Domestic LLM"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
