[package]
name = "domestic-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for Domestic LLM"
publish = false
default-run = "domestic-web-cli"

[dependencies]
tokio.workspace = true
tracing.workspace = true

loco-rs = { workspace = true } #, features = ["with-db", "auth_jwt"] }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.74"
chrono = "0.4"
validator = { version = "0.19" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# view engine i18n
fluent-templates = { version = "0.13.0", features = ["tera"] }
unic-langid = "0.9.4"
axum-macros = "0.5.0"
tera = "1.19.1"

[[bin]]
name = "domestic-web-cli"
path = "src/bin/main.rs"
required-features = []


[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { workspace = true, features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
